tests/positive/basic/exit_nonzero/input.ci
void main() {
    exit(7);
}
