tests/negative/exceptions/throw_non_exception/input.ci
void main() {
    throw 1;
}
